objects/ASI_CRM_Image_Outlet_Site__c.object
<CustomObject>
    <description>Image Outlet Request Line Items (ON)
ASI_CRM_Image_Outlet_Site</description>
    <fields>
        <fullName>ASI_CRM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Expected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Active_for_CRM__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Sub-brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Sub_brand__c.ASI_MFM_Brand__r.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Image Outlet Site</relationshipLabel>
        <relationshipName>Image_Outlet_Site</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_Outlet_Request__c</fullName>
        <label>Image Outlet Request</label>
        <referenceTo>ASI_CRM_Image_Outlet_Request__c</referenceTo>
        <relationshipLabel>Image Outlet Site</relationshipLabel>
        <relationshipName>Image_Outlet_Site</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Previous__c</fullName>
        <label>Previous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Image Wall</fullName>
                </value>
                <value>
                    <fullName>VIP corner</fullName>
                </value>
                <value>
                    <fullName>VIP room</fullName>
                </value>
                <value>
                    <fullName>Corridor</fullName>
                </value>
                <value>
                    <fullName>Lobby</fullName>
                </value>
                <value>
                    <fullName>On trade-Window</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Bar counter</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Wall Bay</fullName>
                </value>
                <value>
                    <fullName>Off trade-Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Image Outlet Site</label>
    <nameField>
        <label>IOM Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Image Outlet Site</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_Image_Outlet_Request</fullName>
        <active>true</active>
        <label>CN Image Outlet Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>